--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "fsevents": "*"
   },
   "dependencies": {
-    "app-module-path": "^2.0.0",
     "babel-runtime": "^6.11.6",
     "basic-auth": "^1.0.4",
     "bcrypt-as-promised": "^1.1.0",
@@ -47,6 +46,7 @@
     "jquery.transit": "^0.9.12",
     "lodash": "^4.16.2",
     "method-override": "^2.3.6",
+    "module-alias": "^2.0.2",
     "moment": "^2.15.1",
     "mongoose": "^4.6.1",
     "morgan": "^1.7.0",
@@ -118,5 +118,8 @@
       "transform-runtime",
       "transform-decorators-legacy"
     ]
+  },
+  "_moduleAliases": {
+    "@": ".dist/"
   }
 }
