--- a/package.json
+++ b/package.json
@@ -44,11 +44,12 @@
     "jquery-scroll-lock": "^2.2.0",
     "jquery.easing": "^1.4.1",
     "jquery.transit": "^0.9.12",
+    "libreversi": "git+https://github.com/sse2017-reversi-fun/libreversi.git",
     "lodash": "^4.16.2",
     "method-override": "^2.3.6",
     "module-alias": "^2.0.2",
     "moment": "^2.15.1",
-    "mongoose": "^4.6.1",
+    "mongoose": "^4.13.0",
     "morgan": "^1.7.0",
     "multer": "^1.2.0",
     "normalize.css": "^4.2.0",
