update to reversi board

--- a/config.yaml
+++ b/config.yaml
@@ -28,8 +28,8 @@ base:
       sizeOfCode: 1048576     # 1 MB
       sizeOfBin: 1048576      # 1 MB
       sizeOfText: 102400      # 100 KB
-      submitInterval: 86400000 # 1 day
-      minSubmitInterval: 60000 # 1 minute
+      submitInterval: 300000  # 5 minutes, for students
+      minSubmitInterval: 60000 # 1 minute, for administrators
       maxExecQuota: 36000000  # 10 hours
   match:
     rules:
