--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build:ui:dev": "gulp fe:iconfont && webpack --progress --colors --display-error-details --bail",
     "build:ui": "npm run build:ui:dev -- --optimize-minimize",
     "watch:server": "gulp clean:server && gulp",
-    "watch:ui": "npm run build:ui:dev -- --watch"
+    "watch:ui": "npm run build:ui:dev -- --watch",
+    "dep-install": "npm install --registry=https://registry.npm.taobao.org --disturl=https://npm.taobao.org/dist"
   },
   "optionalDependencies": {
     "fsevents": "*"
