--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dg-error-factory": "^1.0.2",
     "dg-framework": "^2.0.2",
     "diff-dom": "^2.1.0",
+    "emitter": "0.0.5",
     "eventemitter2": "^2.1.3",
     "express": "^4.14.0",
     "express-decorators": "^0.5.0",
@@ -109,7 +110,7 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^2.3.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.2"
+    "webpack": "^1.15.0"
   },
   "babel": {
     "presets": [
