--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "cli": "node .dist/cli.js",
     "build:server": "gulp clean:server && gulp server",
     "build:ui:dev": "gulp fe:iconfont && webpack --progress --colors --display-error-details --bail",
-    "build:ui": "npm run build:ui:dev -- --optimize-minimize",
+    "build:ui": "npm run build:ui:dev",
     "watch:server": "gulp clean:server && gulp",
     "watch:ui": "npm run build:ui:dev -- --watch",
     "dep-install": "npm install --registry=https://registry.npm.taobao.org --disturl=https://npm.taobao.org/dist"
