--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,13 @@ version: "3"
 services:
   redis:
     image: redis:6-alpine
-    container_name: redis-container
     command: redis-server --requirepass redis
     restart: always
     # for debugging
-    ports:
-      - 6379:6379
+    # ports:
+    #   - 6379:6379
   db:
     image: mongo
-    container_name: mongodb-container
     ports:
       - "27017:27017"
     command: [--auth]
@@ -25,8 +23,6 @@ services:
       - ./mongo-init.sh:/docker-entrypoint-initdb.d/mongo-init.sh
   rabbit:
     image: rabbitmq:3.7-management
-    hostname: rabbit
-    container_name: "rabbitmq-container"
     restart: always
     ports:
       - "5672:5672"
@@ -36,3 +32,11 @@ services:
       - RABBITMQ_DEFAULT_PASS=123456
     volumes:
       - ./.persistence/rabbit-mq/data:/var/lib/rabbitmq
+  portal:
+    build: .
+    image: makyek-portal:latest
+    restart: always
+    ports:
+      - "8888:8888"
+    volumes:
+      - ./config.yaml:/app/config.yaml:ro
