--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:ui": "npm run build:ui:dev",
     "watch:server": "gulp clean:server && gulp",
     "watch:ui": "npm run build:ui:dev -- --watch",
-    "dep-install": "npm install --registry=https://registry.npm.taobao.org --disturl=https://npm.taobao.org/dist"
+    "dep-install": "npm install"
   },
   "optionalDependencies": {
     "fsevents": "*"
