--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,3 +40,5 @@ services:
       - "8888:8888"
     volumes:
       - ./config.yaml:/app/config.yaml:ro
+    tmpfs:
+      - /app/logs:mode=770,uid=1000,gid=1000
